# ai-interview-app

./: .gitignore  CLAUDE.md  README.md  plan.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
backend/: agent.py  prompts.py  pyproject.toml
frontend/: package.json
frontend/src/: App.tsx
liveAvatar/: .dockerignore  .gcloudignore  Dockerfile  README.md  deploy_setup.sh
liveAvatar-demo/: .dockerignore  .gcloudignore  Dockerfile  README.md  deploy_setup.sh
liveAvatar-demo/backend/: check_account.py  force_cleanup.py  pyproject.toml  requirements.txt  server.py  setup.py  test_concurrency.py  wait_cleanup.py
liveAvatar-demo/docs/: KT.md
liveAvatar/backend/: .env.example  README.md  pyproject.toml
liveAvatar/backend/app/: config.py  dependencies.py  logging_config.py  main.py  models.py
liveAvatar/backend/app/routers/: concurrency.py  interview.py  llm_gateway.py  resume.py  scout.py  sessions.py  spike_llm_gateway.py  transcripts.py  vendor.py
liveAvatar/backend/app/services/: appraiser_agent.py  coordinator_agent.py  data_scout_agent.py  evaluator_agent.py  gemini_client.py  gemini_provisioning.py  github_client.py  host_agent.py  interview_config.py  interview_state.py  liveavatar_client.py  llm_json.py  page_fetcher.py  pipeline.py  reply_stream.py  scout_agent.py  scout_store.py  session_state.py  summary_service.py  transcript_render.py  transcript_store.py  web_search_client.py
liveAvatar/backend/data/: questionnaire.yaml  rubric.yaml
liveAvatar/backend/data/questionnaires/: ai_ml.yaml  cloud_infrastructure.yaml  data_engineering.yaml  frontier_tech.yaml
liveAvatar/backend/scripts/: check_account.py  cleanup_orphaned_resources.py  smoke_test_concurrency.py  spike_llm_gateway_setup.py  wait_for_cleanup.py
liveAvatar/backend/tests/: conftest.py  fakes.py  test_config.py  test_dependencies.py  test_logging_config.py  test_main.py  test_models.py
liveAvatar/backend/tests/routers/: test_concurrency.py  test_interview.py  test_llm_gateway.py  test_resume.py  test_scout.py  test_sessions.py  test_transcripts.py  test_vendor.py
liveAvatar/backend/tests/services/: test_appraiser_agent.py  test_coordinator_agent.py  test_data_scout_agent.py  test_evaluator_agent.py  test_gemini_client.py  test_gemini_provisioning.py  test_github_client.py  test_host_agent.py  test_interview_config.py  test_interview_state.py  test_liveavatar_client.py  test_llm_json.py  test_page_fetcher.py  test_pipeline.py  test_reply_stream.py  test_resume_parser.py  test_scout_agent.py  test_scout_store.py  test_session_state.py  test_summary_service.py  test_transcript_render.py  test_transcript_store.py  test_web_search_client.py
liveAvatar/docs/: KT.md  ONBOARDING.md  SETUP_GUIDE.md  TESTER_GUIDE.md  VOICE_TEST_SCRIPT.md  llm-gateway-notes.md
liveAvatar/frontend/: .env.example  (+4 more)
livekit-app/: CREDENTIALS_REQUIRED.md
(+74 files in other folders)
