[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "livekit-agents[liveavatar]~=1.5",
    "livekit-api>=1.1.1",
    "livekit-plugins-deepgram>=1.6.4",
    "livekit-plugins-elevenlabs>=1.6.4",
    "livekit-plugins-google>=1.6.4",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
