[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "google-cloud-storage>=2.18.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.2",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "pytest-mock>=3.14",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
# Pyflakes (F: unused imports/variables, undefined names), the core pycodestyle
# errors (E4 imports / E7 statements / E9 runtime), and import sorting (I).
# Deliberately no formatter run - lint-only, so diffs stay reviewable.
select = ["E4", "E7", "E9", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]
show_missing = true
